--- a/index.html
+++ b/index.html
@@ -122,9 +122,7 @@
     </main>
     <!-- FOOTER -->
     <footer>
-      <h2>
-        <a href="./index.html">WEBSTUDIO</a>
-      </h2>
+      <h2>WEBSTUDIO</h2>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
