--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a href="tel:+110001111111">+11(000)1111111</a></li>
+          <li>
+            <a href="tel:+11000111111">+1(100)011-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
