--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   <body>
     <!-- HEADER -->
     <header>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
       <nav>
         <a href="./index.html">WEBSTUDIO</a>
         <ul>
@@ -22,16 +32,7 @@
             <a href="">Contacts</a>
           </li>
         </ul>
-         <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-        
+      </nav>
     </header>
     <main>
       <!-- HERO -->
