--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WEBSTUDIO</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <!-- HEADER -->
@@ -20,7 +20,7 @@
         </ul>
       </address>
       <nav>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="./index.html">Studio</a>
