--- a/index.html
+++ b/index.html
@@ -9,21 +9,11 @@
   <body>
     <!-- HEADER -->
     <header>
-      <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
           <li>
-            <a href="./index.html">Studio</a>
+            <a href="">Studio</a>
           </li>
           <li>
             <a href="">Portfolio</a>
@@ -33,6 +23,16 @@
           </li>
         </ul>
       </nav>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11(000)111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
       <!-- HERO -->
