--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
     </main>
     <!-- FOOTER -->
     <footer>
-      <h2>WEBSTUDIO</h2>
+      <h2>WebStudio</h2>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
