fix word UI Designer

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               height="260"
             />
             <h3>Daniel Wilson</h3>
-            <p>UI Designer1</p>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
